--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -15,9 +15,7 @@
   <body>
   
     <div th:replace="fragments :: navbar"> </div>
-    <h1 th:inline="text">Hello !</h1>
-    
-	This is home page
+    Profile page.
 	<div th:replace="fragments :: footer"></div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
