--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
 	                <div class="input-group-prepend">
 	                  <span class="input-group-text"><i class="fas fa-user"></i></span>
 	                </div>
-	                <input type="text" name="username" id="username" class="form-control" placeholder="Email" autofocus="autofocus">
+	                <input type="email" name="username" id="username" class="form-control" placeholder="Email" autofocus="autofocus">
 	              </div>
 	              
 	              <div class="input-group mb-3">
