--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -16,21 +16,19 @@
   
     <div th:replace="fragments :: navbar"> </div>
     
-    <div class="container-fluid bg-danger">
+    <div class="container-fluid bg-info">
     	<div class="d-flex justify-content-center">
     		<div class="container-sm-4 my-5">
     		<h5 class="mb-5 text-center">REGISTER</h5>
             <div class="form-group">
 
-			  <form th:action="@{/registration}" th:object="${user}" method="POST">
+			  <form th:action="@{/registration}" th:object="${crmUser}" method="POST">
 			  
-			  	  <input type="hidden" th:field="*{id}" />
-			  <!--  
 	              <div class="input-group mb-3"  id="email">
 	                <div class="input-group-prepend">
 	                  <span class="input-group-text"><i class="fas fa-user"></i></span>
 	                </div>
-	                <input type="email" th:field="*{email}" class="form-control" placeholder="Email">
+	                <input type="email" th:field="*{username}" class="form-control" placeholder="Email">
 	              </div>
 	              
 	              <div class="input-group mb-3">
@@ -39,14 +37,16 @@
 	                </div>
 	                <input type="password" th:field="*{password}" class="form-control" placeholder="Password">
 	              </div>
-	-->
+	
 	                <input type="text" th:field="*{name}" class="form-control my-3" placeholder="Name">
 	              
-	                <input type="tel" th:field="*{telephone}" class="form-control my-3" placeholder="Telephone">
+	                <input type="tel" th:field="*{telephoneNumber}" class="form-control my-3" placeholder="Telephone">
 	              
 	                <input type="text" th:field="*{city}" class="form-control my-3" placeholder="City">
 	              
 	                <input type="text" th:field="*{street}" class="form-control my-3" placeholder="Street">
+	                
+	                <input type="text" th:field="*{postalCode}" class="form-control my-3">
 	                
 	                <input type="submit" class="btn btn-success" value="Register">
 				</form>
