--- a/src/main/resources/templates/sellmycar.html
+++ b/src/main/resources/templates/sellmycar.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    
+    <script type="text/javascript" th:src="@{../static/js/aa.js}"></script>
 
     <title>CarLand</title>
   </head>
@@ -35,17 +36,24 @@
                     
                 <div class="form-group col-sm-4">
                     <label for="make">Make</label>
-                    <input type="text" class="form-control" id="make">
+                    <select class="dropdown custom-select" required="required" name="make" id="make">
+                    	<option disabled="disabled" selected="selected">Choose make</option>
+                    	<option th:each="make: ${makes}" th:text="${make}">
+                    </select>
                 </div>
 
-                <div class="form-group col-sm-4">
+				<div class="form-group col-sm-4">
                     <label for="model">Model</label>
-                    <input type="text" class="form-control" id="model">
+                    <select class="dropdown custom-select" required="required" name="model" id="model">
+                    	
+                    </select>
                 </div>
+
+
+                
             </div>
 
 
-            <div class="form-row">
                 <div class="form-group col-sm-4">
                     <label for="mileage">Mileage</label>
                     <input type="text" class="form-control" id="mileage">
@@ -53,14 +61,37 @@
                 
                 <div class="form-group col-sm-4">
                     <label for="from">Price</label>
-                    <input type="text" class="form-control" id="from" placeholder="From">
-                </div>
-                <div class="form-group col-sm-4">
-                    <label for="from">&nbsp;</label>
-                    <input type="text" class="form-control" id="mileage" placeholder="To">
+                    <input type="text" class="form-control" id="price" placeholder="0$">
                 </div>
                 
+                
+
+
+                
+                
+            <div class="form-group col-sm-4">
+            	<label for="typeInput">Type</label>
+            	<select class="dropdown custom-select" id="typeInput">
+            		<option selected>Choose...</option>
+            		<option th:each="type: ${types}" value="${type}" th:text="${type}"></option>
+            	</select>
             </div>
+            
+            
+              
+            
+            <div class="form-group col-sm-4">
+                    <label for="model">Fuel Type</label>
+                    <input type="text" class="form-control" id="fuelType">
+            </div>
+            
+            <div class="form-group col-sm-4">
+                    <label for="model">Description</label>
+                    <input type="text" class="form-control" id="description">
+            </div>
+                
+                
+                
             <div class="custom-file">
                 <input type="file" class="custom-file-input" id="file">
                 <label class="custom-file-label" for="file">Choose file</label>
@@ -77,9 +108,10 @@
 
     <div th:replace="fragments :: footer"></div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
