--- a/src/main/resources/templates/sellmycar.html
+++ b/src/main/resources/templates/sellmycar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     
-    <script type="text/javascript" th:src="@{../static/js/aa.js}"></script>
+    <script type="text/javascript" th:src="@{/js/findModels.js}"></script>
 
     <title>CarLand</title>
   </head>
