--- a/src/main/resources/templates/sellmycar.html
+++ b/src/main/resources/templates/sellmycar.html
@@ -21,80 +21,83 @@
             <i class="fas fa-arrow-left fa-2x my-5 " style="color:rgb(0, 0, 0);"></i>
         </a>
 
-        <form>
+        <form th:action="@{/sellmycar}" th:object="${advert}" method="POST">
             <div class="form-group">
               <label for="title">Title</label>
-              <input type="text" class="form-control" id="title">
+              <input type="text" class="form-control" id="title" th:field="*{title}">
             </div>
             
                 
             <div class="form-row">
                 <div class="form-group col-sm-4">
-                <label for="productionYear">Year</label>
-                <input type="text" class="form-control" id="productionYear">
-                 </div>
-                    
-                <div class="form-group col-sm-4">
                     <label for="make">Make</label>
-                    <select class="dropdown custom-select" required="required" name="make" id="make">
-                    	<option disabled="disabled" selected="selected">Choose make</option>
-                    	<option th:each="make: ${makes}" th:text="${make}">
+                    <select class="dropdown custom-select" required="required" name="make" id="make" th:field="*{make}">
+                    	<option disabled="disabled" selected="selected" th:value="none">Choose make</option>
+                    	<option th:each="make: ${makes}" th:text="${make}" th:value="${make}">
                     </select>
                 </div>
 
 				<div class="form-group col-sm-4">
                     <label for="model">Model</label>
-                    <select class="dropdown custom-select" required="required" name="model" id="model">
-                    	
+                    <select class="dropdown custom-select" required="required" name="model" id="model" th:field="*{model}">
+                    
                     </select>
                 </div>
+                
+                <div class="form-group col-sm-4">
+	                <label for="productionYear">Year</label>
+	                <input type="text" class="form-control" id="productionYear" th:field="*{year}">
+                 </div>
 
 
                 
             </div>
-
-
-                <div class="form-group col-sm-4">
-                    <label for="mileage">Mileage</label>
-                    <input type="text" class="form-control" id="mileage">
-                </div>
-                
-                <div class="form-group col-sm-4">
-                    <label for="from">Price</label>
-                    <input type="text" class="form-control" id="price" placeholder="0$">
-                </div>
-                
-                
-
-
-                
-                
-            <div class="form-group col-sm-4">
-            	<label for="typeInput">Type</label>
-            	<select class="dropdown custom-select" id="typeInput">
-            		<option selected>Choose...</option>
-            		<option th:each="type: ${types}" value="${type}" th:text="${type}"></option>
-            	</select>
-            </div>
             
-            
-              
-            
-            <div class="form-group col-sm-4">
+            <div class="form-row">
+            	<div class="form-group col-sm-4">
+	            	<label for="typeInput">Type</label>
+	            	<select class="dropdown custom-select" id="typeInput" th:field="*{type}">
+	            		<option disabled="disabled" selected="selected" th:value="none">Choose type</option>
+	            		<option th:each="type: ${types}" value="${type}" th:text="${type}" th:value="${type}"></option>
+	            	</select>
+            	</div>
+            	
+            	<div class="form-group col-sm-4">
                     <label for="model">Fuel Type</label>
-                    <input type="text" class="form-control" id="fuelType">
+                    <select class="dropdown custom-select" id="fuelTypeInput" th:field="*{fuelType}">
+	            		<option disabled="disabled" selected="selected" th:value="none">Choose fuel type</option>
+	            		<option th:value="Diesel">Diesel</option>
+	            		<option th:value="Electric">Electric</option>
+            		</select>
+            	</div>
+            
+	            <div class="form-group col-sm-4">
+	                    <label for="mileage">Mileage</label>
+	                    <input type="text" class="form-control" id="mileage" th:field="*{mileage}">
+	            </div>
+            	
             </div>
             
-            <div class="form-group col-sm-4">
-                    <label for="model">Description</label>
-                    <input type="text" class="form-control" id="description">
+            <div class="form-row">
+            	<div class="form-group col-sm-4">
+                    <label for="from">Price</label>
+                    <input type="text" class="form-control" id="price" placeholder="0$" th:field="*{price}">
+                </div>
             </div>
+
+			
+			<div class="form-group">
+            	<label for="description">Description</label>
+            	<textarea class="form-control" id="description" rows="3" th:field="*{description}"></textarea>
+          	</div>
+			
+            
                 
                 
                 
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="file">
-                <label class="custom-file-label" for="file">Choose file</label>
+                <input type="file" class="custom-file-input" id="image">
+                <label class="custom-file-label" for="image">Choose file</label>
               </div>
             
             
