--- a/src/main/resources/templates/sellmycar.html
+++ b/src/main/resources/templates/sellmycar.html
@@ -9,6 +9,8 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     
     <script type="text/javascript" th:src="@{/js/findModels.js}"></script>
+    <script type="text/javascript" th:src="@{/js/viewUpdatedFilesName.js}"></script>
+    
 
     <title>CarLand</title>
   </head>
@@ -21,7 +23,7 @@
             <i class="fas fa-arrow-left fa-2x my-5 " style="color:rgb(0, 0, 0);"></i>
         </a>
 
-        <form th:action="@{/sellmycar}" th:object="${advert}" method="POST">
+        <form th:action="@{/sellmycar}" th:object="${advert}" enctype="multipart/form-data" method="POST">
             <div class="form-group">
               <label for="title">Title</label>
               <input type="text" class="form-control" id="title" th:field="*{title}">
@@ -81,7 +83,7 @@
             <div class="form-row">
             	<div class="form-group col-sm-4">
                     <label for="from">Price</label>
-                    <input type="text" class="form-control" id="price" placeholder="0$" th:field="*{price}">
+                    <input type="text" th:field="*{price}" class="form-control" id="price"  placeholder="0$">
                 </div>
             </div>
 
@@ -94,25 +96,38 @@
             
                 
                 
-                
-            <div class="custom-file">
-                <input type="file" class="custom-file-input" id="image">
-                <label class="custom-file-label" for="image">Choose file</label>
-              </div>
+            <div class="form-group">
+            	<label for="images">Images</label>
+	            <div class="custom-file" id = "images">
+	                <input type="file" class="custom-file-input" accept="image/*" id="file" name="file" value="Upload" multiple>
+	                <label class="custom-file-label" for="file">Choose file</label>
+	            </div>
+            </div>    
             
-            
-            <div class="form-group"></div>
+            <div class="form-group">
                 <input type="submit" class="form-control btn btn-success col-sm-2" value="Submit">
             </div>
-
+		
         </form>
+       
     </div>
-    
+    </div>
+   
 
     <div th:replace="fragments :: footer"></div>
 
 
+	<script type="text/javascript">
 
+		$('.custom-file-input').change(function (e) {
+	        var files = [];
+	        for (var i = 0; i < $(this)[0].files.length; i++) {
+	            files.push($(this)[0].files[i].name);
+	        }
+	        $(this).next('.custom-file-label').html(files.join(', '));
+		});
+	
+	</script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
