--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,6 +16,8 @@
   
     <div th:replace="fragments :: navbar"> </div>
     <h1 th:inline="text">Hello !</h1>
+    
+    <img src="http://localhost:8085/uploadedimages/c.jpg">
 	This is home page
 	<div th:replace="fragments :: footer"></div>
     <!-- Optional JavaScript -->
