--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
   
     <div th:replace="fragments :: navbar"> </div>
     
-    <div class="container-fluid bg-info">
+    <div class="container-fluid bg-info" style="height:500px;">
     	<div class="d-flex justify-content-center">
     		<div class="container-sm-4 my-5">
     		<h5 class="mb-5 text-center">LOG IN</h5>
