--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,6 +17,7 @@
       <div class="d-inline-flex">
       	
       	
+      	<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}" class="btn btn-dark mx-2">Admin</a>
       	<a th:href="@{/sellmycar}" class="btn btn-danger mx-2"> Sell my car + </a>
         <a sec:authorize="!isAuthenticated()" th:href="@{/registration}" class="btn btn-primary">Sign up</a>
         <a sec:authorize="!isAuthenticated()" th:href="@{/login}"class="btn btn-success mx-2">Sign in</a>
