--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,8 +17,8 @@
     
    	<div class="container mb-5">
 	   	<div class="row">
-	    	<button class="btn btn-danger" style="height:200px;width:50%">Delete</button>
-	    	<button class="btn btn-success" style="height:200px;width:50%">Accept</button>
+	    	<a th:href="@{/admin/decision(id=${advert.id},accepted=false)}" class="btn btn-danger" style="height:200px;width:50%">Delete</a>
+	    	<a th:href="@{/admin/decision(id=${advert.id},accepted=true)}" class="btn btn-success" style="height:200px;width:50%">Accept</a>
 	    </div>
    	</div>
     
