--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -24,6 +24,11 @@
 
 			  <form th:action="@{/registration}" th:object="${crmUser}" method="POST">
 			  
+			  
+			  	  <div class="alert alert-danger col-xs-offset-1 col-xs-10" th:if="${registrationError}">	
+				  	  <span  th:text="${registrationError}"></span>
+			  	  </div>
+			  	  
 	              <div class="input-group mb-3"  id="email">
 	                <div class="input-group-prepend">
 	                  <span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -31,23 +36,61 @@
 	                <input type="email" th:field="*{username}" class="form-control" placeholder="Email">
 	              </div>
 	              
+	              <div th:if="${#fields.hasErrors('username')}" style="margin-bottom: 25px" class="text-danger">
+						<ul>
+						<li th:each="err : ${#fields.errors('username')}" th:text="${err}" />
+						</ul>						
+				  </div>
+	              
 	              <div class="input-group mb-3">
 	                <div class="input-group-prepend">
 	                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
 	                </div>
 	                <input type="password" th:field="*{password}" class="form-control" placeholder="Password">
 	              </div>
+	              
+	              <div th:if="${#fields.hasErrors('password')}"class="text-danger">
+						<ul>
+							<li th:each="err : ${#fields.errors('password')}" th:text="${err}" />
+						</ul>						
+				  </div>
+	              
 	
-	                <input type="text" th:field="*{name}" class="form-control my-3" placeholder="Name">
+	              <input type="text" th:field="*{name}" class="form-control my-3" placeholder="Name">
+	              <div th:if="${#fields.hasErrors('name')}"class="text-danger">
+						<ul>
+							<li th:each="err : ${#fields.errors('name')}" th:text="${err}" />
+						</ul>						
+				  </div>
 	              
-	                <input type="tel" th:field="*{telephoneNumber}" class="form-control my-3" placeholder="Telephone">
 	              
-	                <input type="text" th:field="*{city}" class="form-control my-3" placeholder="City">
+	              <input type="tel" th:field="*{telephoneNumber}" class="form-control my-3" placeholder="Telephone">
+	              <div th:if="${#fields.hasErrors('*{telephoneNumber}')}"class="text-danger">
+						<ul>
+							<li th:each="err : ${#fields.errors('*{telephoneNumber}')}" th:text="${err}" />
+						</ul>						
+				  </div>
 	              
-	                <input type="text" th:field="*{street}" class="form-control my-3" placeholder="Street">
-	                
-	                <input type="text" th:field="*{postalCode}" class="form-control my-3">
-	                
+	              <input type="text" th:field="*{city}" class="form-control my-3" placeholder="City">
+	              <div th:if="${#fields.hasErrors('*{city}')}"class="text-danger">
+						<ul>
+							<li th:each="err : ${#fields.errors('*{city}')}" th:text="${err}" />
+						</ul>						
+				  </div>
+	              
+	              <input type="text" th:field="*{street}" class="form-control my-3" placeholder="Street">
+	              <div th:if="${#fields.hasErrors('*{street}')}"class="text-danger">
+						<ul>
+							<li th:each="err : ${#fields.errors('*{street}')}" th:text="${err}" />
+						</ul>						
+				  </div>
+				    
+	              <input type="text" th:field="*{postalCode}" class="form-control my-3" placeholder="Postal Code">
+	              <div th:if="${#fields.hasErrors('*{postalCode}')}"class="text-danger">
+						<ul>
+							<li th:each="err : ${#fields.errors('*{postalCode}')}" th:text="${err}" />
+						</ul>						
+				  </div>  
 	                <input type="submit" class="btn btn-success" value="Register">
 				</form>
               </div>
